SERVER-16235: make sure to initialize capped counter in WT